[27 Mar 08]

* Fix documentation for tag_counts.

[18 Mar 08]

* Add TagList#toggle [Pete Yandell].

# Add find_related_tags method [Austin Foncaier].

[30 Jan 08]

* Fix Tag.destroy_unused on Rails 2.0.

[23 October 2007]

* Make find_options_for_tag_counts and find_options_for_tagged_with dup their options.

* Apply conditions properly in find_options_for_tag_counts.

* Fix tag_cloud when no tags are present.

[22 October 2007]

* Fix find_tagged_with using :match_all and :include.

* Use inner joins instead of left outer joins.

[15 October 2007]

* Make find_tagged_with correctly apply :conditions

* Add Tag.destroy_unused option.

[11 October 2007]

* Make tag_counts work correctly with STI.

[3 October 2007]

* Improve documentation.

* Fix TagsHelper and test.

[2 October 2007]

* Remove TagList.parse, use TagList.from instead.

* Add :parse option to TagList#new, TagList#add, and TagList#remove.

    tag_list = TagList.new("One, Two", :parse => true) # ["One", "Two"]
    
    tag_list # ["One", "Two"]
    tag_list.add("Three, Four", :parse => true) # ["One", "Two", "Three", "Four"]
    
* Remove TagList#names.

[29 September 2007]

* Add TagsHelper to assist with generating tag clouds and provide a simple example.

[27 September 2007]

* Add #tag_counts method to get tag counts for a specific object's tags.

* BACKWARDS INCOMPATIBILITY: Rename #find_options_for_tagged_with to #find_options_for_find_tagged_with

[17 September 2007]

* Fix clearing of cached tag list when all tags removed.

[12 September 2007]

* Make the TagList class inherit from Array.

* Deprecate obsolete TagList#names.

[6 September 2007]

* Add TagList#include? and TagList#empty?

[26 August 2006]

* Remove deprecated Tag.delimiter. Use TagList.delimiter instead.

[25 August 2007]

* Make tag_counts work with has_many :through

[23 August 2007]

* Make search comparisons case-insensitive across different databases. [Moisés Machado]

* Improve compatiblity with STI. [Moisés Machado]
